Source/Alternet.UI.Pal/Api/WxStatusBarFactory.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "WxStatusBarFactory.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API WxStatusBarFactory* WxStatusBarFactory_Create_()
{
    return MarshalExceptions<WxStatusBarFactory*>([&](){
        return new WxStatusBarFactory();
    });
}

ALTERNET_UI_API void WxStatusBarFactory_DeleteStatusBar_(void* handle)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::DeleteStatusBar(handle);
    });
}

ALTERNET_UI_API void* WxStatusBarFactory_CreateStatusBar_(void* window, int64_t style)
{
    return MarshalExceptions<void*>([&](){
        return WxStatusBarFactory::CreateStatusBar(window, style);
    });
}

ALTERNET_UI_API int WxStatusBarFactory_GetFieldsCount_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return WxStatusBarFactory::GetFieldsCount(handle);
    });
}

ALTERNET_UI_API void WxStatusBarFactory_SetStatusText_(void* handle, const char16_t* text, int number)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::SetStatusText(handle, text, number);
    });
}

ALTERNET_UI_API char16_t* WxStatusBarFactory_GetStatusText_(void* handle, int number)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(WxStatusBarFactory::GetStatusText(handle, number));
    });
}

ALTERNET_UI_API void WxStatusBarFactory_PushStatusText_(void* handle, const char16_t* text, int number)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::PushStatusText(handle, text, number);
    });
}

ALTERNET_UI_API void WxStatusBarFactory_PopStatusText_(void* handle, int number)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::PopStatusText(handle, number);
    });
}

ALTERNET_UI_API void WxStatusBarFactory_SetStatusWidths_(void* handle, int* widths, int widthsCount)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::SetStatusWidths(handle, widths, widthsCount);
    });
}

ALTERNET_UI_API void WxStatusBarFactory_SetFieldsCount_(void* handle, int number)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::SetFieldsCount(handle, number);
    });
}

ALTERNET_UI_API int WxStatusBarFactory_GetStatusWidth_(void* handle, int n)
{
    return MarshalExceptions<int>([&](){
        return WxStatusBarFactory::GetStatusWidth(handle, n);
    });
}

ALTERNET_UI_API int WxStatusBarFactory_GetStatusStyle_(void* handle, int n)
{
    return MarshalExceptions<int>([&](){
        return WxStatusBarFactory::GetStatusStyle(handle, n);
    });
}

ALTERNET_UI_API void WxStatusBarFactory_SetStatusStyles_(void* handle, int* styles, int stylesCount)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::SetStatusStyles(handle, styles, stylesCount);
    });
}

ALTERNET_UI_API RectI_C WxStatusBarFactory_GetFieldRect_(void* handle, int i)
{
    return MarshalExceptions<RectI_C>([&](){
        return WxStatusBarFactory::GetFieldRect(handle, i);
    });
}

ALTERNET_UI_API void WxStatusBarFactory_SetMinHeight_(void* handle, int height)
{
    MarshalExceptions<void>([&](){
        WxStatusBarFactory::SetMinHeight(handle, height);
    });
}

ALTERNET_UI_API int WxStatusBarFactory_GetBorderX_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return WxStatusBarFactory::GetBorderX(handle);
    });
}

ALTERNET_UI_API int WxStatusBarFactory_GetBorderY_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return WxStatusBarFactory::GetBorderY(handle);
    });
}